[gd_scene load_steps=42 format=3 uid="uid://vuf24mk63owv"]

[ext_resource type="Script" path="res://Characters/MeleeEnemy/meleeEnemy.gd" id="1_6odh1"]
[ext_resource type="Texture2D" uid="uid://brnji46gy320w" path="res://Characters/MeleeEnemy/goglin.png" id="4_7axu7"]
[ext_resource type="Texture2D" uid="uid://ce0v3qspi4jbg" path="res://Characters/BowEnemy/emote.png" id="4_dntxo"]
[ext_resource type="AudioStream" uid="uid://n2adtp04gohs" path="res://Characters/enemyhit.wav" id="4_ooht2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j8mi7"]
atlas = ExtResource("4_dntxo")
region = Rect2(3, 0, 3, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_7glq5"]
atlas = ExtResource("4_dntxo")
region = Rect2(0, 0, 1, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnpsk"]
atlas = ExtResource("4_dntxo")
region = Rect2(0, 0, 3, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_upvyx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8mi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glq5")
}],
"loop": false,
"name": &"confuse",
"speed": 1.0
}, {
"frames": [],
"loop": false,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnpsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glq5")
}],
"loop": false,
"name": &"notice",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_soven"]
atlas = ExtResource("4_7axu7")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pux2"]
atlas = ExtResource("4_7axu7")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gme0"]
atlas = ExtResource("4_7axu7")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2ebs"]
atlas = ExtResource("4_7axu7")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5370t"]
atlas = ExtResource("4_7axu7")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2rrg"]
atlas = ExtResource("4_7axu7")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f2ro"]
atlas = ExtResource("4_7axu7")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18y7l"]
atlas = ExtResource("4_7axu7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg41t"]
atlas = ExtResource("4_7axu7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6kd8"]
atlas = ExtResource("4_7axu7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4g66"]
atlas = ExtResource("4_7axu7")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxog2"]
atlas = ExtResource("4_7axu7")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq5si"]
atlas = ExtResource("4_7axu7")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5eli"]
atlas = ExtResource("4_7axu7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gobiy"]
atlas = ExtResource("4_7axu7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4jft"]
atlas = ExtResource("4_7axu7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umdtp"]
atlas = ExtResource("4_7axu7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62jbd"]
atlas = ExtResource("4_7axu7")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we56m"]
atlas = ExtResource("4_7axu7")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36eyp"]
atlas = ExtResource("4_7axu7")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hah3a"]
atlas = ExtResource("4_7axu7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncduh"]
atlas = ExtResource("4_7axu7")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n2p8"]
atlas = ExtResource("4_7axu7")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxghw"]
atlas = ExtResource("4_7axu7")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s17w2"]
atlas = ExtResource("4_7axu7")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vktl1"]
atlas = ExtResource("4_7axu7")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au1l6"]
atlas = ExtResource("4_7axu7")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62ofc"]
atlas = ExtResource("4_7axu7")
region = Rect2(48, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ii8id"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_soven")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pux2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gme0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2ebs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5370t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2rrg")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f2ro")
}],
"loop": true,
"name": &"downStill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18y7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6kd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4g66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxog2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq5si")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5eli")
}],
"loop": true,
"name": &"leftStill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gobiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4jft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umdtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62jbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we56m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36eyp")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hah3a")
}],
"loop": true,
"name": &"rightStill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncduh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n2p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxghw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s17w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vktl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au1l6")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62ofc")
}],
"loop": true,
"name": &"upStill",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m18va"]
radius = 3.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aluoe"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vo4qp"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5otb"]
size = Vector2(6, 18)

[node name="MeleeEnemy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 128
motion_mode = 1
script = ExtResource("1_6odh1")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Emote" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -25)
sprite_frames = SubResource("SpriteFrames_upvyx")
animation = &"none"

[node name="SightLine" type="RayCast2D" parent="."]
collision_mask = 2
collide_with_areas = true

[node name="SightCheck" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ii8id")
animation = &"upStill"

[node name="ArrowCollider" type="Area2D" parent="." groups=["softhit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowCollider"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_m18va")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_aluoe")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_vo4qp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_j5otb")

[node name="BackTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ooht2")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="SightCheck" to="." method="_on_sight_check_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="child_entered_tree" from="ArrowCollider" to="." method="_on_arrow_collider_child_entered_tree"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="BackTime" to="." method="_on_back_time_timeout"]
